--- a/sheet.css
+++ b/sheet.css
@@ -1,10 +1,6 @@
 body {
     background-color: dimgrey;
-}
-
-#square {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+    margin: 0;
 
 }
+
