--- a/sheet.css
+++ b/sheet.css
@@ -1,6 +1,9 @@
 body {
-    background-color: dimgrey;
+    background-color: black;
     margin: 0;
 
+}
+canvas {
+    background-color: dimgrey;
 }
 
