--- a/sheet.css
+++ b/sheet.css
@@ -1,9 +1,15 @@
+html {
+    overflow: hidden;
+}
+
 body {
     background-color: black;
     margin: 0;
 
+
 }
 canvas {
     background-color: dimgrey;
+
 }
 
